--- a/apps/website/src/app/globals.css
+++ b/apps/website/src/app/globals.css
@@ -119,7 +119,7 @@
   width: 100%;
   height: 100%;
   border-radius: inherit;
-  background: radial-gradient(hsl(var(--background) / 1) 85%, hsl(var(--background) / 0) 100%);
+  background: radial-gradient(var(--background) / 1, 85%, var(--background) / 0, 100%);
   z-index: -1;
   filter: blur(10px);
   pointer-events: none;
