--- a/apps/website/src/app/globals.css
+++ b/apps/website/src/app/globals.css
@@ -66,6 +66,8 @@
   --blue-foreground: oklch(0.985 0 0);
   --gold: oklch(0.864 0.176 90.671);
   --gold-foreground: oklch(0.205 0 0);
+  --positive: oklch(0.516 0.136 141.686);
+  --positive-foreground: oklch(0.985 0 0);
 }
 
 .dark {
@@ -93,6 +95,8 @@
   --blue-foreground: oklch(1 0 0);
   --gold: oklch(0.864 0.176 90.671);
   --gold-foreground: oklch(0.205 0 0);
+  --positive: oklch(0.626 0.168 141.759);
+  --positive-foreground: oklch(0.985 0 0);
 }
 
 @layer base {
@@ -109,18 +113,10 @@
   @apply mx-auto w-full max-w-[105rem] px-6 sm:px-10 2xl:px-16;
 }
 
-.backdrop-blur {
-  position: relative;
+.blur-background {
+  @apply relative;
 }
 
-.backdrop-blur::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border-radius: inherit;
-  background: radial-gradient(var(--background) / 1, 85%, var(--background) / 0, 100%);
-  z-index: -1;
-  filter: blur(10px);
-  pointer-events: none;
+.blur-background::before {
+  @apply bg-background absolute -z-10 size-full blur-xl content-[''];
 }
