chore: update deps

--- a/apps/website/src/app/globals.css
+++ b/apps/website/src/app/globals.css
@@ -91,7 +91,7 @@
   --input: oklch(1 0 0 / 15%);
   --link: oklch(0.633 0.131 233.056);
   --ring: oklch(0.556 0 0);
-  --blue: oklch(0.538 0.14 251.502 / 75%);
+  --blue: oklch(0.489 0.125 251.208);
   --blue-foreground: oklch(1 0 0);
   --gold: oklch(0.864 0.176 90.671);
   --gold-foreground: oklch(0.205 0 0);
