feat: init filters

--- a/apps/website/src/app/globals.css
+++ b/apps/website/src/app/globals.css
@@ -28,6 +28,9 @@
   --color-blue-foreground: var(--blue-foreground);
   --color-gold: var(--gold);
   --color-gold-foreground: var(--gold-foreground);
+  --color-positive: var(--positive);
+  --color-positive-foreground: var(--positive-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -59,7 +62,7 @@
   --muted-foreground: oklch(0.521 0 89.876);
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
+  --destructive: oklch(0.564 0.231 28.398);
   --sidebar: oklch(0.985 0 0);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
@@ -73,6 +76,7 @@
   --positive-foreground: oklch(0.985 0 0);
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
+  --sidebar-accent: oklch(0.955 0 0);
 }
 
 .dark {
@@ -102,6 +106,7 @@
   --gold-foreground: oklch(0.205 0 0);
   --positive: oklch(0.626 0.168 141.759);
   --positive-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.269 0 0);
 }
 
 @layer base {
