fix: file browser styling

--- a/apps/website/src/app/globals.css
+++ b/apps/website/src/app/globals.css
@@ -13,8 +13,9 @@
   --color-destructive-foreground: var(--destructive-foreground);
   --color-sidebar: var(--sidebar);
   --color-sidebar-accent: var(--sidebar-accent);
-  --color-accent-foreground: var(--accent-foreground);
   --color-accent: var(--accent);
+  --color-accent-strong: var(--accent-strong);
+  --color-accent-foreground: var(--accent-foreground);
   --color-muted-foreground: var(--muted-foreground);
   --color-muted: var(--muted);
   --color-secondary-foreground: var(--secondary-foreground);
@@ -68,6 +69,7 @@
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
   --accent: oklch(0.95 0 0);
+  --accent-strong: oklch(0.938 0 0);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --destructive-foreground: oklch(0.985 0 0);
@@ -75,7 +77,7 @@
   --sidebar-accent: oklch(0.955 0 0);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
-  --link: oklch(0.513 0.106 232.739);
+  --link: oklch(0.564 0.116 232.62);
   --ring: oklch(0.708 0 0);
   --blue: oklch(0.369 0.115 253.452);
   --blue-foreground: oklch(0.985 0 0);
@@ -101,6 +103,7 @@
   --muted: oklch(0.249 0 0);
   --muted-foreground: oklch(0.764 0 89.876);
   --accent: oklch(0.269 0 0);
+  --accent-strong: oklch(0.306 0 0);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.565 0.203 26.666);
   --destructive-foreground: oklch(0.985 0 0);
